--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   easy-gate:
-    image: r7wx/easy-gate:latest
+    image: wiredlush/easy-gate:latest
     build: .
     container_name: easy-gate
     restart: unless-stopped
